' Generated by UML Generator
' Encoded: vPKzRyCW48Pt_mf6KkIeSuOeZTAgbJf4pP2Xwe0nIL2mYJ1kcdxzze8_0UEgUvS8tdllmZq-x4MXi5HbngFYoF8JbZW3XEEYk55AigHKz868VCFUARYE3YobW319E8sYoWNkHLbGy14149ynvyKCR7HUlZV2ZWiXRI7rzcUMf-Biv4WXTlO-mUHumJArjHCliqIlROroIlI6O6wh1ugLNcukXQAP7OZr3ogesfepG-Vaanbu5Inj37Uc1-XquXfM9fwEXhTrYz1hrJKzwQQXtRaRNZOCe0_3jQqRBD3duzfkEr9m2CsrtjluO12cbQ14BS59H_ehYbYkgDnXGkjHMPQCfrHM4_ETc4tz2FewjLfpzzLLI6mH-tf5rHSxbdwWe-S7B5v-oELZHVUQdUdMQDN2aAWlp8Pb9qu7BEA3KLftEw53CvmOFGWE1S6X43Wq0Ww5mA4nS6WC71e7Xtu5Xtu1zrY-bVBoHt13y_y5LsrNJEgYec6Mr4ncpftiu3a9CEZjOLeZslzt6xGUmzZ1rbZf5qHUdGjzwA-HOkGBP9Zb4Cjzzy9yVccRrUdE44odywPmu6fDfvzpjyc0wIgEcmg16HjM29Zw2YxiJczptN1_z0NDK_qH_W4
' URL: http://www.plantuml.com/plantuml/uml/vPKzRyCW48Pt_mf6KkIeSuOeZTAgbJf4pP2Xwe0nIL2mYJ1kcdxzze8_0UEgUvS8tdllmZq-x4MXi5HbngFYoF8JbZW3XEEYk55AigHKz868VCFUARYE3YobW319E8sYoWNkHLbGy14149ynvyKCR7HUlZV2ZWiXRI7rzcUMf-Biv4WXTlO-mUHumJArjHCliqIlROroIlI6O6wh1ugLNcukXQAP7OZr3ogesfepG-Vaanbu5Inj37Uc1-XquXfM9fwEXhTrYz1hrJKzwQQXtRaRNZOCe0_3jQqRBD3duzfkEr9m2CsrtjluO12cbQ14BS59H_ehYbYkgDnXGkjHMPQCfrHM4_ETc4tz2FewjLfpzzLLI6mH-tf5rHSxbdwWe-S7B5v-oELZHVUQdUdMQDN2aAWlp8Pb9qu7BEA3KLftEw53CvmOFGWE1S6X43Wq0Ww5mA4nS6WC71e7Xtu5Xtu1zrY-bVBoHt13y_y5LsrNJEgYec6Mr4ncpftiu3a9CEZjOLeZslzt6xGUmzZ1rbZf5qHUdGjzwA-HOkGBP9Zb4Cjzzy9yVccRrUdE44odywPmu6fDfvzpjyc0wIgEcmg16HjM29Zw2YxiJczptN1_z0NDK_qH_W4
' Generated on: 2025-11-19T14:36:17.039161387

@startuml
skinparam classAttributeIconSize 0
hide circle

class House {
  -walls: String
  -floor: String
  -door: String
  -windows: String
  -roof: String
  -backyard: String
  -plumbing: String
  -electrical: String
  -heatingSystem: String
  --
  +setWalls(walls: String): void
  +setFloor(floor: String): void
  +setDoor(door: String): void
  +setWindows(windows: String): void
  +setRoof(roof: String): void
  +setBackyard(backyard: String): void
  +setPlumbing(plumbing: String): void
  +setElectrical(electrical: String): void
  +setHeatingSystem(heatingSystem: String): void
  +toString(): String
}

interface HouseBuilder {
  ~buildWalls(): void
  ~buildFloor(): void
  ~buildDoor(): void
  ~buildWindows(): void
  ~buildRoof(): void
  ~buildBackyard(): void
  ~buildPlumbing(): void
  ~buildElectrical(): void
  ~buildHeatingSystem(): void
  ~getHouse(): House
}

class SimpleHouseBuilder {
  -house: House
  --
  +SimpleHouseBuilder()
  +buildWalls(): void
  +buildFloor(): void
  +buildDoor(): void
  +buildWindows(): void
  +buildRoof(): void
  +buildBackyard(): void
  +buildPlumbing(): void
  +buildElectrical(): void
  +buildHeatingSystem(): void
  +getHouse(): House
}

class LuxuryHouseBuilder {
  -house: House
  --
  +LuxuryHouseBuilder()
  +buildWalls(): void
  +buildFloor(): void
  +buildDoor(): void
  +buildWindows(): void
  +buildRoof(): void
  +buildBackyard(): void
  +buildPlumbing(): void
  +buildElectrical(): void
  +buildHeatingSystem(): void
  +getHouse(): House
}

class HouseDirector {
  -builder: HouseBuilder
  --
  +HouseDirector(builder: HouseBuilder)
  +buildSimpleHouse(): House
  +buildLuxuryHouse(): House
}

class HousePattern {
  +{static} main(args: String[]): void
}

HouseBuilder ..> House
SimpleHouseBuilder ..|> HouseBuilder
SimpleHouseBuilder *-- House
LuxuryHouseBuilder ..|> HouseBuilder
LuxuryHouseBuilder *-- House
HouseDirector *-- HouseBuilder
HouseDirector ..> House
@enduml